# djangorestframework-simplejwt

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  EMAIL_OR_USERNAME_LOGIN.md  LICENSE.txt  MANIFEST.in  MIGRATION_NOTES.md  Makefile  README.md  README.rst  codecov.yml  inlang.config.js  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yaml  dependabot.yml
.github/workflows/: ci.yml  i18n.yml  publish.yml  release.yml  test.yml  test_full.yml  tests.yml
docs/: Makefile  auth_integration.md  blacklist_app.md  blacklist_app.rst  cache_support.rst  conf.py  cookie_authentication.rst  creating_tokens_manually.md  creating_tokens_manually.rst  customizing_token_claims.md  customizing_token_claims.rst  development_and_contributing.md  development_and_contributing.rst  drf_yasg_integration.rst  experimental_features.md  experimental_features.rst  family_app.rst  getting_started.md  getting_started.rst  index.md  index.rst  mkdocs.yml  multi_device_sessions.rst  requirements.txt  rest_framework_simplejwt.rst  settings.md  settings.rst  stateless_user_authentication.rst  token_types.md  token_types.rst
docs/docs/: auth_integration.md  blacklist_app.md  blacklist_app.rst  creating_tokens_manually.md  customizing_token_claims.md  customizing_token_claims.rst  development_and_contributing.rst  drf_yasg_integration.rst  experimental_features.md  experimental_features.rst  getting_started.md  getting_started.rst  index.md  index.rst  settings.md  settings.rst  token_types.md  token_types.rst
licenses/: LICENSE-django-rest-framework-jwt
ninja_jwt/: __init__.py  authentication.py  backends.py  compat.py  controller.py  exceptions.py  lazy.py  models.py  schema.py  schema_control.py  settings.py  state.py  tokens.py  utils.py
ninja_jwt/locale/cs/LC_MESSAGES/: django.po
ninja_jwt/locale/de_CH/LC_MESSAGES/: django.po
ninja_jwt/locale/es/LC_MESSAGES/: django.po
ninja_jwt/locale/es_AR/LC_MESSAGES/: django.po
ninja_jwt/locale/es_CL/LC_MESSAGES/: django.mo  django.po
ninja_jwt/locale/fa_IR/LC_MESSAGES/: django.mo  django.po
ninja_jwt/locale/fr/LC_MESSAGES/: django.mo  django.po
ninja_jwt/locale/id_ID/LC_MESSAGES/: django.mo  django.po
ninja_jwt/locale/it_IT/LC_MESSAGES/: django.po
ninja_jwt/locale/nl_NL/LC_MESSAGES/: django.po
ninja_jwt/locale/pl_PL/LC_MESSAGES/: django.po
ninja_jwt/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
ninja_jwt/locale/ru_RU/LC_MESSAGES/: django.po
ninja_jwt/locale/sv/LC_MESSAGES/: django.po
ninja_jwt/locale/tr/LC_MESSAGES/: django.mo  django.po
ninja_jwt/locale/uk_UA/LC_MESSAGES/: django.po
ninja_jwt/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
ninja_jwt/routers/: blacklist.py  obtain.py  verify.py
ninja_jwt/token_blacklist/: __init__.py  admin.py  apps.py  models.py
ninja_jwt/token_blacklist/management/commands/: flushexpiredtokens.py
ninja_jwt/token_blacklist/migrations/: 0002_outstandingtoken_jti_hex.py  0003_auto_20171017_2007.py  0004_auto_20171017_2013.py  0005_remove_outstandingtoken_jti.py  0006_auto_20171017_2113.py  0007_auto_20171017_2214.py
requirements/: codestyle.txt  optionals.txt  requirements-base.txt  requirements-codestyle.txt  requirements-packaging.txt  requirements-testing.txt  testing.txt
rest_framework_simplejwt/: __init__.py  _version.py  authentication.py  backends.py  cache.py  clientDetails.json  compat.py  exceptions.py  key_id.py  models.py  serializers.py  settings.py  state.py  test.py  tokens.py  urls.py  utils.py  views.py
rest_framework_simplejwt/jwt_multi_session/: admin.py  models.py
rest_framework_simplejwt/jwt_multi_session/migrations/: 0001_initial.py
rest_framework_simplejwt/locale/ar/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/az/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/cs/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/de/LC_MESSAGES/: django.po
rest_framework_simplejwt/locale/de_CH/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/el/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/en/LC_MESSAGES/: django.po
rest_framework_simplejwt/locale/es/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/es_AR/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/es_CL/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/fa/LC_MESSAGES/: django.mo  django.po
rest_framework_simplejwt/locale/fa_IR/LC_MESSAGES/: django.mo  (+1 more)
rest_framework_simplejwt/token_blacklist/: __init__.py  admin.py  apps.py  models.py
rest_framework_simplejwt/token_blacklist/migrations/: 0001_initial.py  0002_alter_blacklistedtoken_options_and_more.py.py  0002_outstandingtoken_jti_hex.py  0003_auto_20171017_2007.py  0004_auto_20171017_2013.py  0005_remove_outstandingtoken_jti.py  0006_auto_20171017_2113.py  0007_auto_20171017_2214.py  0008_migrate_to_bigautofield.py  0009_auto_20210525_2224.py  0010_fix_migrate_to_bigautofield.py  0011_linearizes_history.py  0012_alter_outstandingtoken_user.py  0013_alter_blacklistedtoken_options_and_more.py
rest_framework_simplejwt/token_family/: __init__.py  admin.py  apps.py  models.py
rest_framework_simplejwt/token_family/migrations/: 0001_initial.py  0002_rename_tokenfamilyblacklist_blacklistedtokenfamily.py
scripts/: i18n_updater.py
tests/: conftest.py  keys.py  models.py  test_authentication.py  test_backends.py  test_cache.py  test_custom_schema.py  test_i18n_translations.py  test_init.py  test_integration.py  test_locale_messages.py  test_migrations.py  test_models.py  test_routers.py  test_schema.py  test_serializers.py  test_settings.py  test_token_blacklist.py  test_token_family.py  test_token_validation_and_localization.py  test_tokens.py  test_utils.py  test_views.py  urls.py  utils.py  views.py
(+35 files in other folders)
